edit bug fixed,after login redirect to profile page

--- a/web/images/users_images/.gitignore
+++ b/web/images/users_images/.gitignore
@@ -1,3 +1,4 @@
 /5ToS6z3XdVybJPWT-vM_K_ohNmXYvXtN.jpg
 /Bq339XWuTpRha3zeAmp54qy3UPeGTqNC.gif
 /2zkpxHAabUAY9LA-TLiFGev2jnB6XpQL.jpg
+/heDgl-VJgsODOW79dV0E1xHBwYJ7C6FM.jpg
