--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "yiisoft/yii2-swiftmailer": "*",
         "fxp/composer-asset-plugin": "1.0.0",
         "kartik-v/yii2-widget-fileinput": "@dev",
-        "wbraganca/yii2-dynamicform": "*"
+        "wbraganca/yii2-dynamicform": "*",
+        "2amigos/yii2-ckeditor-widget" : "~1.0"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
