--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "fxp/composer-asset-plugin": "1.0.0",
         "kartik-v/yii2-widget-fileinput": "@dev",
         "wbraganca/yii2-dynamicform": "*",
-        "2amigos/yii2-ckeditor-widget" : "~1.0"
+        "2amigos/yii2-ckeditor-widget" : "~1.0",
+	"himiklab/yii2-recaptcha-widget" : "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
