--- a/web/images/users_images/.gitignore
+++ b/web/images/users_images/.gitignore
@@ -2,3 +2,4 @@
 /Bq339XWuTpRha3zeAmp54qy3UPeGTqNC.gif
 /2zkpxHAabUAY9LA-TLiFGev2jnB6XpQL.jpg
 /heDgl-VJgsODOW79dV0E1xHBwYJ7C6FM.jpg
+/DtwrFN1MUSdAVRS8YKK98jaucyDpgWil.jpg
