--- a/web/.htaccess
+++ b/web/.htaccess
@@ -6,3 +6,8 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 # else forward it to index.php
 RewriteRule . index.php
+
+php_value upload_max_filesize 20M
+php_value post_max_size 20M
+php_value max_execution_time 600
+php_value max_input_time 600
